--- a/2022-02-07-the-average-workflow.org
+++ b/2022-02-07-the-average-workflow.org
@@ -190,8 +190,8 @@ The most effective way to get rid of obvious litter is to kill them by
 ~C-k~ directly in the *Org-Agenda* buffer. It is the straight path to
 ~Ktulkh~.
 
-** LAG [#B] Data gathering
-SCHEDULED: <2023-10-31 Tue .+3d/4d>
+** RETARD [#B] Data gathering
+SCHEDULED: <2024-03-19 Tue .+3d/4d>
 :PROPERTIES:
 :LAST_REPEAT: [2023-09-22 Fri 09:55]
 :END:
