Initial transcript brush-up

--- a/2024-01-08-order-and-structure.org
+++ b/2024-01-08-order-and-structure.org
@@ -1,7 +1,7 @@
 #+BEGIN_EXPORT html
 ---
 layout: page
-title: Arrange Your Life
+title: Mull Over Your Life's Goals
 tagline: " in order"
 permalink: /personal/life-style.html
 categories: [Personal, Development, LifeStyle]
@@ -14,3 +14,218 @@ tags: [order, arrange, life, goal, style]
 #+TOC: headlines 2
 
 
+
+* Life Is Like a Lottery Ticket
+
+A lottery ticket is tantalizing because it just seems so simple
+theoretically there's a combination of numbers or scratches you could
+put on this ticket. That would unlock literally billions of dollars all
+you have to do is get the correct combo and Bam!, just like that your
+new life begins. Theoretically the same exists for your life too.
+
+
+There's probably a simple sequence of moves you could do today: say
+the right things be in the right place at just the right time with
+just the right people and, - =Bam!= - all your dreams literally come
+true. Only problem is you have no idea what these secret steps are
+considering the infinite realm of possibilities. It's likely you won't
+just stumble upon this without some sort of plan. But, just for a
+second, - imagine there's a little blue genie sitting in your ear
+whispering to you guiding you each second of your life telling you the
+exact step-by-step sequence you would need to do to achieve literally
+anything.
+
+But that's basically what planning is right we envision a future. Some
+better life for ourselves we strategize the moves needed to get there.
+Only problem is most people suck at it using systems that are
+either way too basic or way too rigid.
+
+For me getting into Harvard for undergrad y for medical school in
+Harvard again for residency was no accident it was strategically
+planned and mapped out week after week month after month. What I'm
+about to tell you is the closest thing you're going to get to having a
+little genie in your ear and with this power you too can achieve
+literally anything. To start, let's talk about a commonly talked about
+framework
+
+
+* Four Quadrant System
+
+
+It goes by many names only thing though there's a huge problem with it.
+Let me explain: anything you do in life falls into one of four
+quadrants. Quadrant number one is filled with stuff that's both
+important and urgent. Sounds great right?
+
+Actually this is not where you want to be. Let me explain most people
+start in quadrant one until tired /inevitably falling into quadrant
+number four/, mindlessly attending to the non-urgent and non-important
+stuff, like cleaning out your email inbox or doom scrolling
+Tik-Tok. You goof around here until you're ready to go back to
+quadrant number one because guilt or because you've now consumed the
+entire internet.
+
+Oh did someone just text you is that a new email in your inbox?
+Hooray, you're saved! Can't help but want to look right. I don't need
+it! I don't need it!
+
+In your moment of weakness you make a detour into quadrant 3 focusing
+on the not important but apparently urgent things and just like this
+from quadrant 1 to 4 to 3 to 1. You go running around and around like a
+little hamster in a wheel of life, devoid of any growth. Reality is this
+quadrant one is just the bare minimum.
+
+
+* Truth About Quadrant One
+
+
+Quadrant one is where you go put out fires but if you're constantly
+holding the fire extinguisher when do you actually hold the hammer
+furthermore guess where the fires of quadrant one come from they
+ignored dreams of quadrant 2 they sprout out from the ground and come
+to haunt you like a psycho ex-girlfriend you see examples of this all
+the time ignore that big project and read the consequences when it's
+due ignore quality time with your friend friends and family and they
+soon become descent strangers ignore the gym long enough and you'll
+wake up one day with a heart attack quadrant 2 is the magical fabled
+land where dreams are built you know the stuff that's good for you but
+because it's not urgent you never make time for
+
+
+* BOX FACTORY ANALOGY
+imagine yourself as a box Factory a day's worth of work is 50 boxes
+buto tomorrow the boss says he needs 100 boxes uhoh sounds important
+and Urgent right you don't want to get fired so you grit your teeth
+and force it to happen from simple to-dos phone reminder systems to
+micromanaged hour by hour planners your mindset is always the same
+learn another productivity hack to squeeze more juice from each day
+what if instead of being a better worker you became a better Factory
+instead of just putting out fires every day you spend one day to make
+everything fireproof and thus free up the rest of your life this is
+what I call the factory Boss versus factory worker mentality don't get
+lost in the weeds strategize at a higher level live your life in
+quadrant 2 easier said than done I know quadrant 2 tasks are always
+foggy and unclear there's no satisfying finish no urgency and no end
+in sight you can always read more learn more work out more and without
+inspiration pushing you forward your brain is hardwired to only do
+things with immediate rewards things that feel good as chaotic as
+quadrant 1 is it does indeed feel good checking off Tod do and putting
+out fires gives you an immediate sense of accomplishment and thus back
+to assembling the boxes you go this is the inherent problem the four
+quadrant model gives you the conceptual framework but it's not
+practical instead of fighting your brain's need for feel-good
+productivity build a system that capitalizes on it this is the Crux
+
+* STEP 1: THE SECRET QUADRANT
+of technique number one creating the magical quadrant of 1.5 the
+secret quadrant of success 1.5 is quadrant 2's twin brother except
+much sexier everything in it is systematically broken down into task
+that are not only actionable practical and urgent but most importantly
+of all carefully picked to get the highest yield for your time to
+create quadrant 1.5 you first build the BUILD THE CLOUD cloud the
+cloud represents your ultimate dream it hangs in the sky thousands of
+feet in the air all fluffy and nice while you admire this cloud from
+afar it taunts you with its tiny little raindrops theoretically as
+long as you follow these drops all the way up you'll reach it most
+people's plans are to do exactly this follow the drops from the ground
+up with checklists to-dos organizers just good enough to collect the
+lowest hanging fruit the few droplets right above your head you can
+touch and see the problem is the higher you go the more difficult it
+becomes how do you know if you're chasing the right Cloud anymore
+instead do a top down approach you start with the top of the cloud
+where the raindrops are incredibly obvious and fat you follow them
+down as they Splinter seeing exactly what actions should be
+prioritized this is called building the blueprint let's say your dream
+cloud is medical school studying the cloud you see it's actually four
+key Parts grades medical extracurriculars a killer essay and an
+amazing interview the interview Cloud further splinters into two key
+Parts delivery and substance to deliver your message well you need
+Charisma a confident voice and of course a sexy outfit we could do an
+entire series on Charisma alone so I won't go any further here but the
+point is to keep following these clouds all the way down until you're
+literally at the level of individual raindrops done right you
+systematically understand everything you need to focus on or
+prioritize expose all your blind spots and weaknesses and gain the
+ability to course correct in real time when I was trying to get into
+Harvard I remember doing this exact analysis every week how's my GPA
+Cloud doing my extracurricular cloud my letters of recommendation
+cloud and all its tiny mini clouds and raindrops underneath I was a
+pilot and these were the gauges and flight instruments in my cockpit
+they were would tell me if I was on track without it I would have been
+Flying Blind once you have this blueprint mapped out you begin to
+schedule your life around weekly goals the Crux of technique number
+two all
+
+* STEP 2: SMALLEST UNIT OF TIME
+goals have a onewe deadline this is how you build urgency to
+everything in quadrant 1.5 1 month is conceptually too long knowing
+you have an entire month to accomplish something kills any sense of
+urgency and is too late for feedback having only 12 times a year to
+course correct is not good enough on the other hand one day is too
+short it creates anxiety and the desire to excessively micromanage
+hence the weekly deadline for all assigned tasks just long enough for
+Meaningful work but flexible enough for you to still handle the rest
+of your life for example let's say you have a medical interview in 1
+month how would the weekly goal system work first week three goals
+doesn't matter when you do it how you do it you just have to do it and
+oh yeah you only again have one week first goal is to watch five
+videos on Charisma second goal is to analyze Five actors being
+interviewed pretend they are your clients and you are their public
+relations manager pretend they are paying you a crap ton of money for
+good feedback so make sure you know your stuff third goal is to
+interview yourself in front of a mirror after an hour of this do it
+again but this time record it watch it and give yourself feedback
+second week you have two goals first is to come up with a list of life
+stories and experiences you can sprinkle into your interviews to show
+why you are awesome you want these stories to be interesting so they
+for sure will remember you second goal is to prepare for gotcha
+questions some smart ass is definitely going to ask you about your top
+three weaknesses what you regret most maybe what your spirit vegetable
+is or some stupid thing like that you want to have thought about some
+of these beforehand so you don't freeze in the moment week three is
+mock interview time schedule 10 of them with people that you trust and
+make it as difficult as possible give them a list of Hardball
+questions and ask them for real feedback week four figure out as much
+stuff about the inter interview in advance where it is who it is what
+makes them tick read their articles understand their field of interest
+if their hobby is rescuing abandoned puppies go Rescue an abandoned
+puppy so you can relate if you've noticed the mini goals for each week
+are all actionable steps these weekly goals are never outcome based
+like get 100 new subscribers or get an A on the exam but rather
+something always within your control now that each week's plan is set
+how do you decide what to do each day technique number three the
+inverted
+
+* STEP 3: INVERTED PYRAMID METHOD
+period method I've talked about this before in a previous video
+essentially always start your day with the most important thing spend
+the most amount of time on this most important thing and less and less
+time on each subsequent task when done well this entire system works
+on autopilot each week's goals keeps you flowing forward while the
+inverted pyramid allows you to flexibly schedule the day-to-day in
+service of these goals the beauty about the system is that it self-
+corrects if I haven't made much progress on a goal becomes that much
+more urgent as the week draws to a close elegantly this urgency gets
+crystallized within the inverted pyramid too the more urgent a task
+the more likely it is to occupy the top tier of importance for the day
+this flexibility is the core feature of this system no more
+micromanaging yourself with fancy calendars or minor systems or
+detailed to-dos focus on the cloud live in
+
+* SUMMARY
+quadrant 1.5 and set your weekly goals in advance wake up each day and
+spend the majority of your time doing your highest yield most
+important activity when done right you should have a clear sense of
+what to focus on for any given day and that's it rinse and repeat
+until success I hope this video was useful if so please subscribe
+comment and then go tell your friends your grandma and your pet
+hamster also I'm doing an experiment is much faster for me to write my
+thoughts than is to make videos and thus I have a whole backlog of
+material waiting to get published if you want to get early access to
+this and more then please go to my substack and consider becoming a
+paid member to support this endeavor Link in the description all right
+smile you later and once again
+
+* SHOUT-OUTS AND SUPER THANKS
+shout out to Keith Dow 8327 thank you so much for your super thanks
+your support is greatly appreciated thanks again man
